feat: corrigindo erro swagger
