# src/view/convert_to_response.go
@@ -7,8 +7,8 @@ import (
 
 func ConvertDomainToResponse(
 	userDomain model.UserDomainInterface,
-) response.UserReponse {
-	return response.UserReponse{
+) response.UserResponse {
+	return response.UserResponse{
 		ID:    userDomain.GetID(),
 		Email: userDomain.GetEmail(),
 		Name:  userDomain.GetName(),
